infrastructure/03-apps/excalidraw/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: excalidraw
  labels:
    pod-security.kubernetes.io/enforce: restricted
