infrastructure/03-apps/excalidraw/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw-ingress
  namespace: excalidraw
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts: [excalidraw.foobarbaz.fr]
      secretName: excalidraw-tls
  rules:
    - host: excalidraw.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: excalidraw-app, port: { number: 80 } }
